--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -19,6 +19,8 @@ phases:
   pre_build:
     commands:
       - echo "Logging in to ECR..."
+      - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       
       - echo "Ensuring ECR repository exists..."
