--- a/buildspec.infra.yml
+++ b/buildspec.infra.yml
@@ -11,16 +11,20 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      python: 3.11
+      nodejs: 20  # Required to install the CDK CLI
     commands:
-      - echo "Installing Python dependencies and AWS CDK..."
-      - cd infra && pip install -r requirements.txt
+      - echo "Installing AWS CDK CLI and Python dependencies..."
+      - npm install -g aws-cdk
+      - pip install -r infra/requirements.txt
       - echo "Dependencies installed successfully"
 
   pre_build:
     commands:
       - echo "Logging in to ECR..."
       - AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-      
+
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       
       - echo "Ensuring ECR repository exists..."
