--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://ashish:password@localhost:5432/ashish
+DATABASE_URL=postgresql://neondb_owner:npg_vfoxM3F7dnSQ@ep-lively-waterfall-a45337xb-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
