--- a/buildspec.basic.infra.yml
+++ b/buildspec.basic.infra.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - cd infra
-      - cdk deploy UserServiceBasicInfraStack --all --require-approval never --outputs-file outputs.json
+      - cdk deploy UserServiceBasicInfraStack --require-approval never --outputs-file outputs.json
 
 artifacts:
   files:
